{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 232,
  "lineage": "7a475f61-abeb-7bd9-3679-5181e8b16636",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "internet_gateway_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0f64773b8b5f67fe9",
            "vpc_id": "vpc-0199bb6b9850a5ed4"
          },
          "dependencies": [
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "machine-1-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dae13901d815b095",
            "associate_with_private_ip": "10.0.1.125",
            "association_id": "eipassoc-045cfa80dc3e69b24",
            "domain": "vpc",
            "id": "eipalloc-0dae13901d815b095",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0e0588dc2df1add40",
            "private_dns": "ip-10-0-1-125.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-13-251-213-27.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.213.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateaway",
            "aws_network_interface.network-interface-testing",
            "aws_security_group.security_webserver_traffic",
            "aws_subnet.subnet_env",
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testing-centos-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6ba217f554f6137",
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:instance/i-00dff0607bc808f03",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dff0607bc808f03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testing-env",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e0588dc2df1add40"
              }
            ],
            "primary_network_interface_id": "eni-0e0588dc2df1add40",
            "private_dns": "ip-10-0-1-125.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.125",
            "public_ip": "13.251.213.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9ba0227b50c0cf4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012f6c8c472cc2a86",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d34eeed05741e2c"
            ]
          },
          "dependencies": [
            "aws_network_interface.network-interface-testing",
            "aws_security_group.security_webserver_traffic",
            "aws_subnet.subnet_env",
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateaway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:internet-gateway/igw-02578dacbb7791a9e",
            "id": "igw-02578dacbb7791a9e",
            "owner_id": "505427597189",
            "vpc_id": "vpc-0199bb6b9850a5ed4"
          },
          "dependencies": [
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network-interface-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:network-interface/eni-0e0588dc2df1add40",
            "id": "eni-0e0588dc2df1add40",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:64:d6:08:0a:3a",
            "owner_id": "505427597189",
            "private_ip": "10.0.1.125",
            "private_ips": [
              "10.0.1.125"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07d34eeed05741e2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012f6c8c472cc2a86"
          },
          "dependencies": [
            "aws_security_group.security_webserver_traffic",
            "aws_subnet.subnet_env",
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:route-table/rtb-0c6c1cb1bfefc28b3",
            "id": "rtb-0c6c1cb1bfefc28b3",
            "owner_id": "505427597189",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0f64773b8b5f67fe9",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02578dacbb7791a9e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-route"
            },
            "tags_all": {
              "Name": "testing-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0199bb6b9850a5ed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.internet_gateway_egress",
            "aws_internet_gateway.internet_gateaway",
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6e7cdf5895f49bf",
            "route_table_id": "rtb-0c6c1cb1bfefc28b3",
            "subnet_id": "subnet-012f6c8c472cc2a86"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.internet_gateway_egress",
            "aws_internet_gateway.internet_gateaway",
            "aws_route_table.route",
            "aws_subnet.subnet_env",
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_webserver_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:security-group/sg-07d34eeed05741e2c",
            "description": "webserver inbound traffict",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d34eeed05741e2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Webserver",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Webserver",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Web",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver_traffic",
            "name_prefix": "",
            "owner_id": "505427597189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_webserver_traffic"
            },
            "tags_all": {
              "Name": "security_webserver_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0199bb6b9850a5ed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:subnet/subnet-012f6c8c472cc2a86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-012f6c8c472cc2a86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505427597189",
            "tags": {
              "Name": "testing-subnet"
            },
            "tags_all": {
              "Name": "testing-subnet"
            },
            "vpc_id": "vpc-0199bb6b9850a5ed4"
          },
          "dependencies": [
            "aws_vpc.testing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505427597189:vpc/vpc-0199bb6b9850a5ed4",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0e1699003c2ef175d",
            "default_route_table_id": "rtb-0128553578c6d716e",
            "default_security_group_id": "sg-05c13f84c8659279f",
            "dhcp_options_id": "dopt-01db4e7718e6df7aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0199bb6b9850a5ed4",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-08f62d14ec220c757",
            "ipv6_cidr_block": "2406:da18:53e:b100::/56",
            "main_route_table_id": "rtb-0128553578c6d716e",
            "owner_id": "505427597189",
            "tags": {
              "Name": "testing"
            },
            "tags_all": {
              "Name": "testing"
            }
          }
        }
      ]
    }
  ]
}